--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
-
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
@@ -231,7 +224,7 @@
           <div class="modal-body">
             <a href="http://womenineecs.mit.edu/"><img class="description-img" src="img/wieecs.png"></a>
             <h5><strong>Community Events Director</strong></h5>
-            <i>Aug 2017-present</i>
+            <i>Aug 2017-Jun 2019</i>
             <br><br>
             <ul class="exp-description">
               <li>Leading the committee on planning budgets and logistics as well as executing community events to support and engage our community of women in EECS on campus</li>
@@ -255,7 +248,7 @@
           <div class="modal-body">
             <a href="http://adt.mit.edu/"><img class="description-img" src="img/adt.JPG"></a>
             <h5><strong>Choreographer</strong></h5>
-            <i>Feb 2017-present</i>
+            <i>Feb 2017-Jun 2019</i>
             <br><br>
             <ul class="exp-description">
               <li>Led a weekly workshop series for Kpop choreography and techniques open to anyone on campus aimed to improve beginning-intermediate dancers</li>
@@ -378,6 +371,16 @@
 
   <div class="all-projects">
   <a>
+  <div class="card" data-toggle="modal" data-target="#airbeatz-modal">
+    <img class="card-img-top card-image" src="img/airbeatz-project1.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Airbeatz</h5>
+      <p class="card-text">Music rhythm game w/ LeapMotion sensor</p>
+    </div>
+  </div>
+  </a>
+
+  <a>
   <div class="card" data-toggle="modal" data-target="#scripted-modal">
     <img class="card-img-top card-image" src="img/scripted-project.png" alt="Card image cap">
     <div class="card-body">
@@ -418,6 +421,39 @@
   </a>
 
   <!-- modals -->
+  <div id="airbeatz-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Airbeatz</h4>
+        </div>
+        <div class="modal-body">
+          <h5><strong>Music rhythm game with the LeapMotion sensor</strong></h5>
+          <i>Spring 2019</i>
+          <br>
+          <br>
+          <img class="card-image" src="img/airbeatz-project1.png" style="width: 80%; height: 20%">
+          <br><br>
+          <p>
+            Airbeatz is a music rhythm game a friend and I created.
+            You can select different songs to play, as well as difficulties.
+            During the game play, there are 4 side bars, and gems come to each of those bars from the center. The player needs to tap the bars according to the beat of the song.
+            You can view how accurately you matched the beat (Perfect, Good, or Miss), and combos if you get 5 hits or more in a row.
+            At the end, you receive a score and total number of Perfect, Good, Misses, etc., and an overall letter grade of your performance.
+          </p>
+          <br>
+          <img class="card-image" src="img/airbeatz-project2.png" style="width: 80%; height: 20%">
+          <br><br>
+          <p>Languages and tools: Python, Kivy, LeapMotion sensor</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div id="scripted-modal" class="modal fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -428,6 +464,8 @@
         <div class="modal-body">
           <a href="https://www.scripted.org/"><img class="card-image" src="img/scripted-project.png" style="width: 80%; height: 20%"></a>
           <h5><strong>Project Gallery</strong></h5>
+          <i>Summer 2018</i>
+          <br>
           <br>
           <p>
             We created a project gallery site for ScriptEd students to submit their projects to.
@@ -462,6 +500,8 @@
         <div class="modal-body">
           <img class="card-image" src="img/cogtoybox-project.png" style="width: 80%; height: 20%">
           <h5><strong>Teacher Dashboard</strong></h5>
+          <i>Summer 2018</i>
+          <br>
           <br>
           <p>
             We created a dashboard for teachers and district admins who use the Cognitive Toybox app to view data from app to better
@@ -497,6 +537,8 @@
         </div>
         <div class="modal-body">
           <h5><strong>Meme Slack Bot</strong></h5>
+          <i>Summer 2018</i>
+          <br>
           <br>
           <p>
             PigeonBot is a simple SlackBot meme generator that generates the pigeon meme.
@@ -529,6 +571,8 @@
         </div>
         <div class="modal-body">
           <h5><strong>Company Dashboard</strong></h5>
+          <i>Winter 2016, Spring 2017</i>
+          <br>
           <br>
           <p>
             In order to give companies in Green Street's Corporate Challenge a better understanding of their impact on Walk/Ride Day
